# mne-denoise

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  api.html  development.html  dss.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run_erp_benchmark.py  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: ci.yml
_downloads/023652df07ce296ebfc116f4a3b79d73/: plot_04_spectral_dss.ipynb
_downloads/090414685fae2519eaa729d196ed743a/: plot_05_adaptive_advanced.ipynb
_downloads/283c235b39228f54bd1250a6dd0544f0/: plot_01_basic_usage.ipynb
_downloads/2fe4bd689545fd29b7219b3b768843b1/: plot_02_artifact_correction.py
_downloads/32853f54c7b09d5ff221bcb303066ae6/: plot_03_epoched_data.ipynb
_downloads/4b31d2234aed7d8787286cabcdd0a313/: plot_09_custom_bias.ipynb
_downloads/4fb8e653cea80ae14dff29eab85d30a2/: plot_07_spectrogram_dss.py
_downloads/60a509f22fefc650c731c7bed38b6c2c/: plot_10_benchmarking.ipynb
_downloads/61a2d275468a5a2d0a2575e50dcd4592/: plot_05_periodic_dss.py
_downloads/631d035bca8191e4ddb0fa517020733d/: plot_10_benchmarking.py
_downloads/69848a39710cbb4af1fbc177dc3f7d99/: plot_04_spectral_dss.py
_downloads/6c49e38bb3a8b4ed0d565c08ccb9ee6f/: plot_04_adaptive_mode.py
_downloads/74f2c3a751a6b3d071d2545f6381a99c/: plot_05_periodic_dss.ipynb
_downloads/7690e0d3ff8b5da75969871c58f20385/: plot_05_adaptive_advanced.py
_downloads/7da1f3d2ca32f233e4d91a0ff4f58b71/: plot_07_spectrogram_dss.ipynb
_downloads/7f0b3885b28faa9f36f4428f6ae9d5fc/: plot_06_temporal_dss.ipynb
_downloads/8075c1897d008756e76a13996fc49655/: plot_02_parameter_tuning.py
_downloads/83d228e10ca442cc8c0ced5ecc2e32f8/: plot_02_parameter_tuning.ipynb
_downloads/8592f50245e55e26823dae95bd2e3110/: plot_03_evoked_responses.ipynb
_downloads/8955a40f2918c7f865cc4463ee2d0b3b/: plot_03_evoked_responses.py
_downloads/9b30b9171cad19787f1fc54412450abf/: plot_02_artifact_correction.ipynb
_downloads/aaa0cf73ca9400d3d9d7a958230e9286/: plot_03_epoched_data.py
_downloads/b203274b2573d210c7d604f1dcef3ed6/: plot_01_dss_fundamentals.ipynb
_downloads/bafd12779eb9a6fbeed6b01ddf37d477/: plot_06_temporal_dss.py
_downloads/c78d025389f3936d16d5a12c7e955f6d/: plot_09_custom_bias.py
_downloads/c87ff87364e6810c97728692e498b1a2/: plot_12_joint_dss.py
_downloads/cade6d982bebe223110999885fc64b51/: plot_12_joint_dss.ipynb
_downloads/d103b66c35076b41e2b77dfc592add7f/: plot_04_adaptive_mode.ipynb
_downloads/d879977c38fa05c9d9c3334aaa9a66e9/: plot_08_blind_source_separation.ipynb
_downloads/d9affb40ef75ff70bc878d3328b4dd15/: plot_11_wiener_masking.ipynb
_downloads/e2943086a4009244434e4715ad3f27ea/: plot_11_wiener_masking.py
_downloads/e8adf32c906629e4000384e78ae8e88c/: plot_01_basic_usage.py
_downloads/ec54a52fefba7486000263cc789ba741/: plot_08_blind_source_separation.py
_downloads/fe5c3408909496970265c8ddcb5d726b/: plot_01_dss_fundamentals.py
_modules/: index.html
_sources/: api.rst.txt  development.rst.txt  dss.md.txt  getting-started.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt
auto_examples/: index.html  sg_execution_times.html
auto_examples/dss/: index.html  plot_01_dss_fundamentals.html  plot_02_artifact_correction.html  plot_03_evoked_responses.html  plot_04_spectral_dss.html  plot_05_periodic_dss.html  plot_06_temporal_dss.html  plot_07_spectrogram_dss.html  plot_08_blind_source_separation.html  plot_09_custom_bias.html  plot_10_benchmarking.html  plot_11_wiener_masking.html  plot_12_joint_dss.html  sg_execution_times.html
auto_examples/zapline/: index.html  plot_01_basic_usage.html  plot_02_parameter_tuning.html  plot_03_epoched_data.html  plot_04_adaptive_mode.html  plot_05_adaptive_advanced.html  sg_execution_times.html
docs/: Makefile  api.rst  conf.py  index.rst  sg_execution_times.rst  testing.rst
examples/dss/: README.rst  plot_01_dss_fundamentals.py  plot_02_artifact_correction.py  plot_03_evoked_responses.py  plot_04_spectral_dss.py  plot_05_periodic_dss.py  plot_06_temporal_dss.py  plot_07_spectrogram_dss.py  plot_08_blind_source_separation.py  plot_09_custom_bias.py  plot_10_benchmarking.py  plot_11_wiener_masking.py  plot_12_joint_dss.py
examples/tutorials/: Paper9_tabletennis_reference_cleaning_benchmark.ipynb  viz_showcase.txt
examples/zapline/: README.rst  plot_01_basic_usage.py  plot_02_parameter_tuning.py  plot_03_epoched_data.py  plot_04_adaptive_mode.py  plot_05_adaptive_advanced.py
mne_denoise/: __init__.py  qa.py
mne_denoise/benchmarks/: __init__.py  io.py
mne_denoise/icanclean/: README.md  __init__.py  _cca.py  cca.py  core.py
mne_denoise/qa/: __init__.py  metrics.py
mne_denoise/viz/: __init__.py  _metrics.py  _seaborn.py  _summary_panels.py  _theme.py  _utils.py  benchmark.py  benchmark_io.py  (+12 more)
scripts/: download_ds004505.py  run_erp_dss_benchmark.py  run_line_noise_benchmark.py  visual_qa.py
tests/: test_averaging.py  test_benchmark_io.py  test_erp_viz.py  test_icanclean.py  test_qa.py  test_qa_full.py  test_qa_metrics.py  test_utils.py  test_viz.py  test_viz_benchmark.py  test_viz_dss.py  test_viz_metrics.py  test_viz_zapline_extended.py
(+61 files in other folders)
