[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mne-denoise"
version = "0.0.1"
description = "Denoising Source Separation (DSS) and ZapLine algorithms for MNE-Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Sina Esmaeili", email = "sina.esmaeili@umontreal.ca" },
  { name = "Hamza Abdelhedi", email = "hamza.abdelhedi@umontreal.ca" },
]
maintainers = [
  { name = "Sina Esmaeili", email = "sina.esmaeili@umontreal.ca" },
  { name = "Hamza Abdelhedi", email = "hamza.abdelhedi@umontreal.ca" },
]
keywords = [
  "mne",
  "eeg",
  "meg",
  "denoising",
  "dss",
  "zapline",
  "neuroscience",
  "electrophysiology",
  "signal-processing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "mne>=1.8",
  "numpy>=1.22",
  "scipy>=1.8",
  "matplotlib>=3.5",
  "scikit-learn>=1.1",
]

[project.urls]
Homepage = "https://github.com/mne-tools/mne-denoise"
Documentation = "https://mne-tools.github.io/mne-denoise/"
Repository = "https://github.com/mne-tools/mne-denoise"
Issues = "https://github.com/mne-tools/mne-denoise/issues"
Changelog = "https://github.com/mne-tools/mne-denoise/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-timeout>=2.2.0",
]
dev = [
  "mne-denoise[test]",
  "ruff>=0.9.0",
  "pre-commit>=3.6.0",
  "mypy>=1.8.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "types-setuptools",
  "towncrier",
]
docs = [
  "mne>=1.8",
  "numpydoc>=1.6.0",
  "pydata-sphinx-theme>=0.15.2",
  "sphinx>=7.2.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "sphinx-gallery>=0.15.0",
  "myst-parser>=2.0.0",
]
all = [
  "mne-denoise[dev,docs]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [""]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "W",      # pycodestyle warnings
  "D",      # pydocstyle
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "E731",   # lambda assignment
  "D100",   # missing docstring in public module
  "D104",   # missing docstring in public package
  "D105",   # missing docstring in magic method
  "D107",   # missing docstring in __init__
  "D203",   # one-blank-line-before-class (conflicts with D211)
  "D212",   # multi-line-summary-first-line (conflicts with D213)
  "B905",   # zip without strict= argument
  "SIM108", # use ternary operator
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["D", "B", "SIM", "E402"]
"examples/**" = ["D", "E402", "B", "F404"]
"scripts/**" = ["D", "E402"]
"run_erp_benchmark.py" = ["D", "E402"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["mne_denoise"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.codespell]
skip = "*.html,*.css,*.js,*.svg,*.lock,.git,__pycache__,*.egg-info,build,dist,docs/_build,*.map"
ignore-words-list = "nd,ot,fro"

[tool.towncrier]
package = "mne_denoise"
filename = "CHANGELOG.md"
directory = "docs/changes/devel/"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/mne-tools/mne-denoise/issues/{issue})"
template = "docs/changes/template.jinja"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "feature"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Internal"
showcontent = true
